--- a/frontend/assets/global.css
+++ b/frontend/assets/global.css
@@ -29,10 +29,7 @@ main {
   max-width: 26em;
 }
 
-main.please-wait {
-  opacity: 0.5;
-  cursor: wait;
-}
+main.please-wait {}
 
 h1 {
   background-image: url(./logo-black.svg);
@@ -40,7 +37,6 @@ h1 {
   background-repeat: no-repeat;
   background-size: auto 1.5em;
   margin-top: 0;
-  margin-bottom: 1em;
   padding: 3.5em 0 0;
   text-align: center;
   font-size: 1.5em;
@@ -82,7 +78,6 @@ ul.information  {
   font-size: 1em;
   border: 2px solid var(--light-gray);
   padding: 0.5em;
-  margin: 2em auto;
 }
 .change > div {
   display: flex;
@@ -92,12 +87,18 @@ ul.information  {
 }
 .change input {
   flex: 1;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 .change label {
   display: block;
   text-align: left;
   margin-right: 10px;
   padding-bottom: 0.5em;
+}
+.change button {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 a,
@@ -119,6 +120,15 @@ a:active,
 button, input {
   font: inherit;
   outline: none;
+}
+
+main.please-wait .change button {
+  position: relative;
+  pointer-events: none;
+  background-color: white;
+}
+main.please-wait .change button span {
+  visibility: hidden;
 }
 
 button {
@@ -171,5 +181,53 @@ li {
   }
   input:focus {
     box-shadow: 0 0 10em rgba(255, 255, 255, 0.02) inset;
+  }
+}
+
+main.please-wait .loader,
+main.please-wait .loader:after{
+  display: inline-block;
+}
+.loader,
+.loader:after {
+  display: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+}
+.loader {
+  font-size: 10px;
+  position: absolute;
+  top: calc(50% - 10px);
+  left: calc(50% - 10px);
+  text-indent: -9999em;
+  border-top: 3px solid var(--secondary);
+  border-right: 3px solid var(--secondary);
+  border-bottom: 3px solid var(--secondary);
+  border-left: 3px solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
