--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -12,61 +12,52 @@ html {
   --primary: #FF585D;
   --secondary: #0072CE;
 
-  background-color: var(--bg);
   color: var(--fg);
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
   font-size: calc(0.9em + 0.5vw);
   line-height: 1.3;
 }
 
 body {
   margin: 0;
-  padding: 1em;
+  height: 100vh;
+  background: linear-gradient(to bottom, transparent, rgb(var(--shadow))) rgb(var(--light-gray));
+  background-color: var(--shadow) !important;
 }
 
-main {
-  margin: 0 auto;
-  max-width: 26em;
+a {
+  color: var(--fg) !important;
+  text-decoration: none !important;
 }
 
-main.please-wait {}
+.container{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  padding-top: 0;
+}
 
 h1 {
-  background-image: url(./logo-black.svg);
-  background-position: center 1em;
-  background-repeat: no-repeat;
-  background-size: auto 1.5em;
-  margin-top: 0;
-  padding: 3.5em 0 0;
   text-align: center;
   font-size: 1.5em;
 }
+
 .greeting {
   color: var(--secondary);
   text-decoration: underline;
 }
-h2 {
+
+.alert{
+  max-width: 410px;
+  font-size: 13px;
   text-align: center;
 }
 
 .please-wait .change {
   pointer-events: none;
-}
-
-ul.information  {
-  margin: 2em 0 2em 0;
-  padding: 0;
-  text-align: left;
-  font-size: 0.8em;
-
-}
-.information li:first-child {
-  border-top: 1px solid var(--light-gray);
-}
-.information li {
-  padding: 0.5em 0;
-  border-bottom: 1px solid var(--light-gray);
-  list-style: none;
 }
 
 .change {
@@ -76,7 +67,6 @@ ul.information  {
   justify-content: space-evenly;
   align-items: stretch;
   font-size: 1em;
-  border: 2px solid var(--light-gray);
   padding: 0.5em;
 }
 .change > div {
@@ -89,12 +79,6 @@ ul.information  {
   flex: 1;
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
-}
-.change label {
-  display: block;
-  text-align: left;
-  margin-right: 10px;
-  padding-bottom: 0.5em;
 }
 .change button {
   border-bottom-left-radius: 0;
@@ -122,30 +106,15 @@ button, input {
   outline: none;
 }
 
-main.please-wait .change button {
+.please-wait .change button {
   position: relative;
   pointer-events: none;
-  background-color: white;
 }
-main.please-wait .change button span {
+.please-wait .change button span {
   visibility: hidden;
 }
 
-button {
-  background-color: var(--secondary);
-  border-radius: 5px;
-  border: none;
-  color: #efefef;
-  cursor: pointer;
-  padding: 0.3em 0.75em;
-  transition: transform 30ms;
-}
-button:hover, button:focus {
-  box-shadow: 0 0 10em rgba(255, 255, 255, 0.2) inset;
-}
-
 input {
-  background-color: var(--light-gray);
   border: none;
   border-radius: 5px 0 0 5px;
   caret-color: var(--primary);
@@ -184,8 +153,8 @@ li {
   }
 }
 
-main.please-wait .loader,
-main.please-wait .loader:after{
+.please-wait .loader,
+.please-wait .loader:after{
   display: inline-block;
 }
 .loader,
